--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
+    "@scallop-io/sui-scallop-sdk": "^0.44.7",
     "@tanstack/react-query": "^5.8.4",
     "aftermath-ts-sdk": "^1.1.14",
     "class-variance-authority": "^0.7.0",
